# dotfiles

./: .gitmodules  README.md  bashrc  git-config.sh  install.sh  kitty.conf  link-files.sh  nathan-zshrc  nvim-testing.md  openmc.sh  other.md  user-dirs.dirs
hypr/: hyprland.conf
hyprpanel/: config.json
python-venvs/: README.md  create-venv.sh  swap-venv.sh
python-venvs/ai-ml/: pyproject.toml  runme.sh
python-venvs/base/: pyproject.toml  runme.sh
python-venvs/openmc/: pyproject.toml  runme.sh
python-venvs/thor/: pyproject.toml  runme.sh
