[project]
name = "ai-ml"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.5.2",
    "keras>=3.13.1",
    "keras-tuner>=1.4.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pyqt5>=5.15.11",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
]
