[project]
name = "openmc"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.15.1",
    "jupyterlab>=4.5.2",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pyqt5>=5.15.11",
    "scipy>=1.17.0",
    "uncertainties>=3.2.3",
    "vtk>=9.5.2",
]
